--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,9 +30,6 @@ jobs:
           done
           echo "pepe ${{ steps.changed-files.outputs.all_modified_files }}"
 
-      - id: codeowners
-        uses: SvanBoxel/codeowners-action@v1
-
       - run: |
           echo ${{ steps.codeowners.outputs.codeowners }};
 
@@ -57,7 +54,7 @@ jobs:
             --method POST \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/hhru/xhh/pulls/${PR_NUMBER}/requested_reviewers \
+            /repos/nikita160/testAction/pulls/${PR_NUMBER}/requested_reviewers \
             -f "reviewers[]=${REVIEWERS}"
         env:
           GH_TOKEN: ${{ github.token }}
