--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -55,7 +55,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/nikita160/testActions/pulls/${PR_NUMBER}/requested_reviewers \
-            -f "reviewers[]='de1n'"
+            -f "reviewers[]=de1n"
         env:
           GH_TOKEN: ${{ github.token }}
           PR_NUMBER: ${{ github.event.number }}
